# ocaml-tree-sitter-lang

./: README.md
c-sharp/lib/: Boilerplate.ml  CST.ml  Parse.ml
c/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  parser.c
cpp/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli
csharp/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  bindings.c  dune
go/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  dune  parser.c
java/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  bindings.c  dune  parser.c
javascript/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  parser.c
kotlin/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli
lua/lib/: Boilerplate.ml  CST.ml  Parse.ml  parser.c
ruby/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  bindings.c  dune
rust/fyi/semgrep-grammars/src/tree-sitter-rust/: grammar.js
rust/lib/: Boilerplate.ml  CST.ml  Parse.ml  parser.c
tsx/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli
typescript/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  bindings.c  dune  parser.c
