(library
  (public_name tree-sitter-ruby)
  (name tree_sitter_ruby)
  (preprocess (pps ppx_sexp_conv))
  (libraries atdgen-runtime tree-sitter.run)
  (foreign_stubs
    (language c)
    (names parser bindings)
    (flags -fPIC
           -I .
           -I %{env:TREESITTER_INCLUDE_DIR=/usr/local/include})
  )
  (c_library_flags (-L%{env:TREESITTER_LIBRARY_DIR=/usr/local/lib}
                    -lstdc++
                    -ltree-sitter)
  )
  (foreign_stubs
    (language cxx)
    (names scanner)
    (flags -fPIC
           -I .
           -I %{env:TREESITTER_INCLUDE_DIR=/usr/local/include})
  )
)
